[gd_scene load_steps=15 format=3 uid="uid://d3f4lsf05xl65"]

[ext_resource type="Script" path="res://Player/Projectiles/blaster_projectile.gd" id="1_s3dno"]
[ext_resource type="Shader" path="res://Pickups/rainbow.gdshader" id="2_5bn71"]
[ext_resource type="PackedScene" uid="uid://dv0jq3pemcjyr" path="res://Colliders/hit_box.tscn" id="3_7l13i"]
[ext_resource type="Texture2D" uid="uid://c1ogxo42wp7t1" path="res://UI/pizza.png" id="3_mmg5x"]
[ext_resource type="PackedScene" uid="uid://cs4pdnl4db0o1" path="res://Colliders/hurt_box.tscn" id="4_8tfso"]
[ext_resource type="AudioStream" uid="uid://kl0bd5eg66l0" path="res://Audio/SFXs/Player/appleThrusters.wav" id="6_hwaf7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikfxd"]
render_priority = 0
shader = ExtResource("2_5bn71")
shader_parameter/uv1_scale = Vector2(2, 2)
shader_parameter/alpha = 1.0
shader_parameter/rippliing = false
shader_parameter/using_texture = true
shader_parameter/head_color = Vector3(1, 1, 0)
shader_parameter/face_color = Vector3(1, 1, 0.1)
shader_parameter/question_texture = ExtResource("3_mmg5x")

[sub_resource type="PrismMesh" id="PrismMesh_r1qpx"]
material = SubResource("ShaderMaterial_ikfxd")
size = Vector3(0.2, 0.5, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_p3iox"]
size = Vector3(0.506897, 0.105469, 0.506952)

[sub_resource type="BoxShape3D" id="BoxShape3D_fxrhl"]
size = Vector3(0.635547, 0.505615, 0.619995)

[sub_resource type="BoxShape3D" id="BoxShape3D_r5ylw"]
size = Vector3(0.545044, 0.325562, 0.556152)

[sub_resource type="Animation" id="Animation_0g4y2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ua8p7"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fw82"]
_data = {
"RESET": SubResource("Animation_0g4y2"),
"spin": SubResource("Animation_ua8p7")
}

[node name="BlasterProjectile" type="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, -0.5, 4.37114e-08, 0, -4.37114e-08, -0.5, 0.000607967, 0.00547194, 0.00661027)
collision_layer = 8192
collision_mask = 0
script = ExtResource("1_s3dno")
damage = 0.25

[node name="Pivot" type="Marker3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("PrismMesh_r1qpx")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0015564, 0, 0.000662208)
shape = SubResource("BoxShape3D_p3iox")

[node name="HitBox" parent="." instance=ExtResource("3_7l13i")]
visible = false
collision_layer = 2048
collision_mask = 16
damage = 0.5

[node name="CollisionShape3D" parent="HitBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00019531, 0.0152588, -0.00115967)
shape = SubResource("BoxShape3D_fxrhl")

[node name="HurtBox" parent="." instance=ExtResource("4_8tfso")]
visible = false
collision_layer = 4096
collision_mask = 32
damage = 0.5

[node name="CollisionShape3D" parent="HurtBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00604248, 0.00250244, -0.000244141)
shape = SubResource("BoxShape3D_r5ylw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2fw82")
}
autoplay = "spin"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hwaf7")
volume_db = -10.0
pitch_scale = 2.38
autoplay = true
bus = &"Sound Effects"

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
